test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/return_struct/src/data_structures.sw
library data_structures;

pub struct MyStruct {}