test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_types_and_traits_alias/src/lib.sw
library;

pub struct MyStruct0 {}
pub enum MyEnum0 {}
pub trait MyTrait0 {
}
abi MyAbi0 {
}
